--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -10,22 +10,33 @@
         <local:MainViewModel />
     </Window.DataContext>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*"  />
         </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*"  />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Personnummer" />
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding PersonNumber}" />
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Växelkurs" />
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ExchangeRate}" />
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Csv" />
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding CsvFile}" />
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Csv" />
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CsvFile}" />
+            <Button Grid.Row="0" Grid.Column="2" Content="..." Click="OnOpenFileClick" />
+
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Personnummer" />
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding PersonNumber}" />
+
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Växelkurs" />
+            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ExchangeRate}" />
+        </Grid>
+        <TextBox Grid.Column="1" IsReadOnly="True" Text="{Binding SruText, Mode=OneWay}" />
     </Grid>
 </Window>
