--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -30,7 +30,7 @@
 
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Csv" />
             <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CsvFile}" />
-            <Button Grid.Row="0" Grid.Column="2" Content="..." Click="OnOpenFileClick" />
+            <Button Grid.Row="0" Grid.Column="2" Content="..." Click="OnOpenClick" />
 
             <TextBlock Grid.Row="1" Grid.Column="0" Text="year" />
             <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Year}" />
@@ -41,7 +41,7 @@
             <TextBlock Grid.Row="3" Grid.Column="0" Text="växelkurs" />
             <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ExchangeRate}" />
 
-            <Button Grid.Row="4" Grid.Column="1" Content="spara" Click="ButtonBase_OnClick"/>
+            <Button Grid.Row="4" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
         </Grid>
         <TextBox Grid.Column="1" IsReadOnly="True" Text="{Binding SruText, Mode=OneWay}" />
     </Grid>
