--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -21,6 +21,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -46,7 +48,13 @@
 
             <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ExchangeRate}" />
 
-            <Button Grid.Row="4" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
+            <TextBlock Grid.Row="4" Grid.Column="0" Text="vinst" />
+            <TextBox Grid.Row="4" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Win, Mode=OneWay}" ToolTip="för in värde i fält 7.4 om du laddar upp .sru via filöverföringstjänsten"/>
+
+            <TextBlock Grid.Row="5" Grid.Column="0" Text="förlust" />
+            <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Loss, Mode=OneWay}" ToolTip="för in värde i fält 8.3 om du laddar upp .sru via filöverföringstjänsten"/>
+
+            <Button Grid.Row="6" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
         </Grid>
         <TextBox Grid.Column="1" IsReadOnly="True" Text="{Binding SruText, Mode=OneWay}" VerticalScrollBarVisibility="Auto" />
     </Grid>
