--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -17,45 +17,81 @@
         <Grid Margin="2,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*"  />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*"  />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="csv" />
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CsvFile}" />
-            <Button Grid.Row="0" Grid.Column="2" Content="..." Click="OnOpenClick" />
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="csv" />
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CsvFile}" />
+                <Button Grid.Row="0" Grid.Column="2" Content="..." Click="OnOpenClick" />
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="year" />
-            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Year}" />
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="year" />
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Year}" />
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="personnummer" />
-            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding PersonNumber}" />
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="personnummer" />
+                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding PersonNumber}" />
 
-            <TextBlock Grid.Row="3" Grid.Column="0">           
-                <Hyperlink NavigateUri="https://www.riksbank.se/sv/statistik/sok-rantor--valutakurser/valutakurser-till-deklarationen/" RequestNavigate="OnRequestNavigate">
-                    växelkurs
-                </Hyperlink>
-            </TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="0">           
+                    <Hyperlink NavigateUri="https://www.riksbank.se/sv/statistik/sok-rantor--valutakurser/valutakurser-till-deklarationen/" RequestNavigate="OnRequestNavigate">
+                        växelkurs
+                    </Hyperlink>
+                </TextBlock>
 
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ExchangeRate}" />
+                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ExchangeRate}" />
 
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="vinst" />
-            <TextBox Grid.Row="4" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Win, Mode=OneWay}" ToolTip="för in värde i fält 7.4 om du laddar upp .sru via filöverföringstjänsten"/>
+                <TextBlock Grid.Row="4" Grid.Column="0" Text="vinst" />
+                <TextBox Grid.Row="4" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Win, Mode=OneWay}" ToolTip="för in värde i fält 7.4 om du laddar upp .sru via filöverföringstjänsten"/>
 
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="förlust" />
-            <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Loss, Mode=OneWay}" ToolTip="för in värde i fält 8.3 om du laddar upp .sru via filöverföringstjänsten"/>
+                <TextBlock Grid.Row="5" Grid.Column="0" Text="förlust" />
+                <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Loss, Mode=OneWay}" ToolTip="för in värde i fält 8.3 om du laddar upp .sru via filöverföringstjänsten"/>
 
-            <Button Grid.Row="6" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
+                <Button Grid.Row="6" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
+            </Grid>
+            <StackPanel Grid.Row="1">
+                <StackPanel.Resources>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Setter Property="TextWrapping" Value="Wrap" />
+                    </Style>
+                </StackPanel.Resources>
+                <TextBlock Text="1. exportera activity report csv från IBKR Performance and Reports > Statements > Activity" />
+                <TextBlock Text="2. läs in med ..." />
+                <TextBlock Text="3. ange personnummer och växelkurs" />
+                <TextBlock Text="4. spara" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="5.a färre än 300 rader kan importeras i " />
+                    <TextBlock>           
+                        <Hyperlink NavigateUri="https://www.skatteverket.se/" RequestNavigate="OnRequestNavigate">
+                            mina sidor
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="5.b fler än 300 rader kan laddas upp i " />
+                    <TextBlock>           
+                        <Hyperlink NavigateUri="https://sso.skatteverket.se/fv_ext/fv_web/systemval.do" RequestNavigate="OnRequestNavigate">
+                            filöverföringstjänsten
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+
+                <TextBlock Text="Om du laddar upp via filöverföringstjänsten ska du ange vinst/förlust i fält 7.4 8.3" />
+            </StackPanel>
         </Grid>
+
         <TextBox Grid.Column="1" IsReadOnly="True" Text="{Binding SruText, Mode=OneWay}" VerticalScrollBarVisibility="Auto" />
     </Grid>
 </Window>
