--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -58,10 +58,10 @@
                 <CheckBox Grid.Row="4" Grid.Column="1" IsChecked="{Binding GroupBySymbol}" />
 
                 <TextBlock Grid.Row="5" Grid.Column="0" Text="vinst" />
-                <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Win, Mode=OneWay}" ToolTip="för in värde i fält 7.4 om du laddar upp .sru via filöverföringstjänsten"/>
+                <TextBox Grid.Row="5" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding WinSum, Mode=OneWay}" ToolTip="för in värde i fält 7.4 om du laddar upp .sru via filöverföringstjänsten"/>
 
                 <TextBlock Grid.Row="6" Grid.Column="0" Text="förlust" />
-                <TextBox Grid.Row="6" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Loss, Mode=OneWay}" ToolTip="för in värde i fält 8.3 om du laddar upp .sru via filöverföringstjänsten"/>
+                <TextBox Grid.Row="6" Grid.Column="1" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding LossSum, Mode=OneWay}" ToolTip="för in värde i fält 8.3 om du laddar upp .sru via filöverföringstjänsten"/>
 
                 <Button Grid.Row="7" Grid.Column="1" Content="spara" Click="OnSaveClick"/>
             </Grid>
