--- a/IbkrToSru/MainWindow.xaml
+++ b/IbkrToSru/MainWindow.xaml
@@ -11,7 +11,7 @@
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*"  />
         </Grid.ColumnDefinitions>
         <Grid Margin="2,0">
@@ -75,11 +75,12 @@
                         <Setter Property="TextWrapping" Value="Wrap" />
                     </Style>
                 </StackPanel.Resources>
-                <TextBlock Text="1. exportera activity report csv från IBKR Performance and Reports > Statements > Activity" />
-                <TextBlock Text="2. ange år" />
-                <TextBlock Text="3. ange personnummer" />
+                <TextBlock Text="1. exportera activity report csv från IBKR&#x0a;   Performance and Reports > Statements > Activity" />
+                <TextBlock Text="2. läs in csv med ..." />
+                <TextBlock Text="3. ange år" />
+                <TextBlock Text="4. ange personnummer" />
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="4. ange växelkurs, du hittar den " />
+                    <TextBlock Text="5. ange växelkurs, du hittar den " />
                     <TextBlock>           
                         <Hyperlink NavigateUri="https://www.riksbank.se/sv/statistik/sok-rantor--valutakurser/valutakurser-till-deklarationen/" RequestNavigate="OnRequestNavigate">
                             här
@@ -87,8 +88,7 @@
                     </TextBlock>
                 </StackPanel>
 
-                <TextBlock Text="5. läs in med ..." />
-                <TextBlock Text="6. spara" />
+                <TextBlock Text="6. klicka spara" />
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="7.a färre än 300 rader kan importeras i " />
                     <TextBlock>           
@@ -101,12 +101,12 @@
                     <TextBlock Text="7.b fler än 300 rader kan laddas upp i " />
                     <TextBlock>           
                         <Hyperlink NavigateUri="https://sso.skatteverket.se/fv_ext/fv_web/systemval.do" RequestNavigate="OnRequestNavigate">
-                            filöverföringstjänsten
+                            filöverföringstjänst
                         </Hyperlink>
                     </TextBlock>
                 </StackPanel>
 
-                <TextBlock Text="Om du laddar upp via filöverföringstjänsten ska du ange summa vinst och förlust i fält 7.4 och 8.3" />
+                <TextBlock Text="Om du laddar upp via filöverföringstjänsten ska du ange&#x0a;summa vinst och förlust i fält 7.4 och 8.3" />
             </StackPanel>
         </Grid>
 
